# VERSION 45
45.1
- Group bar chart times by 100ms (+ separate Instant & separate TLE group)
- Fixed changelog always appearing when version is decimal
- Localize submission charts
45
- Added bar graph for submission running time for AC tests
- Reworked console logging (now uses console.debug)
- Changed the way achievements are stored, thus removing achievements got before version 45 (go to Learn C++ and Algorithms next to get them again)

# VERSION 44
44.1
- Changed all substr in code with substring
- Changed versioning to be with decimal numbers
44
- Change solved task achievement names

# VERSION 43
- Achievements (tasks solved, lectures read)
- Changelogs w/ changelog button on the bottom
- Code localization improvements

# VERSION 42
- Changed colors of TLE and RE verdicts
- Added pie chart in submission feedback

# VERSION 41
- Theme button on the bottom-right
- Automatically detect theme from system preferences

# VERSION 40
- Fix broken links
- Slightly change mission complete sound